as of week 4, all folder structure cleaned up, seperate directories. Attempting to merge all into one super-repo

--- a/web/Team/team.html
+++ b/web/Team/team.html
@@ -62,7 +62,7 @@ This website was based upon a number of source materials, which are elaborated u
 	    <!--Your team member information is instantiated here. To edit your information, please edit your team member html file, located in this directory. Instantiate your staff information using the examples below.-->
 	    <div id="member1"></div>
 	    <div id="member2"></div>
-	    <div id="member3"></div>
+	    <div id="vignesh"></div>
 	    <div id="csomers"></div>
     </div>
 
@@ -81,7 +81,7 @@ $(document).ready(function() {
     $("#menu").load("navbar.html");
 	$("#member1").load("Team/member1.html");
     $("#member2").load("Team/member2.html");
-	$("#member3").load("Team/member3.html");
+	$("#vignesh").load("Team/vignesh.html");
 	$("#csomers").load("Team/csomers.html");
 	$("#footer").load("footer.html");
 });
